# carlos-okupa

./: .gitignore  CMakeLists.txt  PROVENANCE.json  README.md
docs/: ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  TESTING.md
resources/: resources.qrc
src/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h
src/audio/: audioengine.cpp  audioengine.h  audioplayer.cpp  audioplayer.h  audiotrack.cpp  audiotrack.h  mixercontroller.cpp  mixercontroller.h  mixerengine.cpp  mixerengine.h  realtimemixer.cpp  realtimemixer.h  waveformrenderer.cpp  waveformrenderer.h
src/audio/backends/: audiobackend.h  coreaudio_backend.cpp  coreaudio_backend.h  wasapi_backend.cpp  wasapi_backend.h
src/processing/: exportmanager.cpp  exportmanager.h  modelprovenance.cpp  modelprovenance.h  separationengine.cpp  separationengine.h
src/python/: demucs_wrapper.py  demucswrapper.cpp  demucswrapper.h  pythonprocess.cpp  pythonprocess.h  pythonruntime.cpp  pythonruntime.h
src/ui/widgets/: fileimport.cpp  fileimport.h  folderchooser.cpp  folderchooser.h  mixer.cpp  mixer.h  progressdialog.cpp  progressdialog.h  timeline.cpp  timeline.h  trackselector.cpp  trackselector.h
src/utils/: filemanager.cpp  filemanager.h  hashverifier.cpp  hashverifier.h  logger.cpp  logger.h
